--- a/home/.config/khal/config
+++ b/home/.config/khal/config
@@ -14,6 +14,11 @@ path = ~/.local/share/calendars/Joerg+Shannan/
 type = discover
 color = light green
 
+[[clan]]
+path = ~/.local/share/calendars/clan/
+type = discover
+color = light magenta
+
 [locale]
 timeformat = %H:%M
 dateformat = %Y-%m-%d
