--- a/home/.msmtprc
+++ b/home/.msmtprc
@@ -12,7 +12,7 @@ account        thalheim
 host           mail.thalheim.io
 port           587
 from           joerg@thalheim.io
-user           joerg@higgsboson.tk
+user           joerg@thalheim.io
 passwordeval   "rbw get Eve"
 
 # Set thalheim as default
