--- a/.github/workflows/update-submodules.yaml
+++ b/.github/workflows/update-submodules.yaml
@@ -6,7 +6,7 @@ on:
     - cron: "51 2 * * *"
 jobs:
   update-submodules:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v5
         with:
