gitignore output.txt

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ nixos/eve/modules/hydra/.terraform.lock.hcl
 
 # nix results
 result
+/output.txt
 pkgs/browser-cli/extension/web-ext-artifacts
 pkgs/direnv-instant/target
 pkgs/direnv-instant/.claude/settings.local.json
