librewolf: show more audio devices

--- a/home/.librewolf/librewolf.overrides.cfg
+++ b/home/.librewolf/librewolf.overrides.cfg
@@ -9,3 +9,5 @@ defaultPref("sidebar.verticalTabs", true);
 defaultPref("network.trr.mode", 2);
 defaultPref("network.trr.uri", "https://dns.quad9.net/dns-query");
 defaultPref("network.trr.bootstrapAddress", "9.9.9.9");
+// Disable RFP to allow real audio device enumeration for video conferencing
+defaultPref("privacy.resistFingerprinting", false);
