updater: add nix package with all dependencies
The updater package bundles python, nix-update, nix, git, and gh
so it can be run in CI without additional setup.

Usage: nix run .#updater -- --pr

--- a/.github/workflows/update-packages.yaml
+++ b/.github/workflows/update-packages.yaml
@@ -31,10 +31,9 @@ jobs:
         run: |
           echo "${{ steps.app-token.outputs.token }}" | gh auth login --with-token
       - name: Update packages
-        working-directory: pkgs
         run: |
           if [ -n "${{ inputs.package }}" ]; then
-            python3 -m updater --pr -p "${{ inputs.package }}"
+            nix run .#updater -- --pr -p "${{ inputs.package }}"
           else
-            python3 -m updater --pr
+            nix run .#updater -- --pr
           fi
