switch to own radicle mirror action

--- a/.github/workflows/radicle.yaml
+++ b/.github/workflows/radicle.yaml
@@ -10,7 +10,7 @@ jobs:
     environment: radicle
     steps:
       - id: mirror
-        uses: gsaslis/mirror-to-radicle@v0.1.0
+        uses: Mic92/mirror-to-radicle@main
         with:
           radicle-identity-alias: "${{ secrets.RADICLE_IDENTITY_ALIAS }}"
           radicle-identity-passphrase: "${{ secrets.RADICLE_IDENTITY_PASSPHRASE }}"
@@ -18,3 +18,4 @@ jobs:
           radicle-identity-public-key: "${{ secrets.RADICLE_IDENTITY_PUBLIC_KEY }}"
           radicle-project-name: "${{ secrets.RADICLE_PROJECT_NAME }}"
           radicle-repository-id: "${{ secrets.RADICLE_REPOSITORY_ID }}"
+          preferred-seeds: "z6MktZckvzz29eJtUQ4u9bkNu8jihg1sRvknUZMm1xq2stn9@radicle.thalheim.io:8776,z6MkwQTGzGVFjmT54Ustr82rc3bMGkjSjeCXQWgSvNNvVnwa@eva.thalheim.io:8776"
