ci: switch to new radicle repo after delegate key loss
Created fresh radicle project rad:z2dqRKkK5yu89w3CMX2dVsYrRwvFk to
replace rad:z3oWHBpUaHgN9pPapQ1dswRmQpErJ which had an orphaned
delegate with lost keys.

--- a/.github/workflows/radicle.yaml
+++ b/.github/workflows/radicle.yaml
@@ -10,7 +10,7 @@ jobs:
     environment: radicle
     steps:
       - id: mirror
-        uses: Mic92/mirror-to-radicle@debug-crash
+        uses: Mic92/mirror-to-radicle@main
         with:
           radicle-identity-alias: "${{ secrets.RADICLE_IDENTITY_ALIAS }}"
           radicle-identity-passphrase: "${{ secrets.RADICLE_IDENTITY_PASSPHRASE }}"
