--- a/.github/workflows/radicle.yaml
+++ b/.github/workflows/radicle.yaml
@@ -29,3 +29,4 @@ jobs:
           radicle-project-name: "${{ secrets.RADICLE_PROJECT_NAME }}"
           radicle-repository-id: "${{ secrets.RADICLE_REPOSITORY_ID }}"
           preferred-seeds: "z6MktZckvzz29eJtUQ4u9bkNu8jihg1sRvknUZMm1xq2stn9@radicle.thalheim.io:8776,z6MkwQTGzGVFjmT54Ustr82rc3bMGkjSjeCXQWgSvNNvVnwa@eva.thalheim.io:8776"
+          pr-labels: "auto-merge"
