gitconfig: use push.default=current for predictable branch pushing
With 'simple', git pushes to the tracked upstream if names match. With
branch.autoSetupMerge=always, new branches track main, causing confusing
push behavior. 'current' always pushes to a same-named remote branch.

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -60,7 +60,7 @@
   # recover failed commit messages: https://stackoverflow.com/questions/9133526/git-recover-failed-commits-message
   recommit = !git commit -eF $(git rev-parse --git-dir)/COMMIT_EDITMSG
 [push]
-  default = simple
+  default = current
   autoSetupRemote = true
 [rerere]
   autoUpdate = true
