radicle: add also public nodes

--- a/.github/workflows/radicle.yaml
+++ b/.github/workflows/radicle.yaml
@@ -31,6 +31,6 @@ jobs:
           radicle-identity-public-key: "${{ secrets.RADICLE_IDENTITY_PUBLIC_KEY }}"
           radicle-project-name: "${{ secrets.RADICLE_PROJECT_NAME }}"
           radicle-repository-id: "${{ secrets.RADICLE_REPOSITORY_ID }}"
-          preferred-seeds: "z6MktZckvzz29eJtUQ4u9bkNu8jihg1sRvknUZMm1xq2stn9@radicle.thalheim.io:8776,z6MkwQTGzGVFjmT54Ustr82rc3bMGkjSjeCXQWgSvNNvVnwa@eva.thalheim.io:8776"
+          preferred-seeds: "z6MkrLMMsiPWUcNPHcRajuMi9mDfYckSoJyPwwnknocNYPm7@iris.radicle.xyz:8776,z6Mkmqogy2qEM2ummccUthFEaaHvyYmYBYh3dbe9W4ebScxo@rosa.radicle.xyz:8776,z6MktZckvzz29eJtUQ4u9bkNu8jihg1sRvknUZMm1xq2stn9@radicle.thalheim.io:8776,z6MkwQTGzGVFjmT54Ustr82rc3bMGkjSjeCXQWgSvNNvVnwa@eva.thalheim.io:8776"
           pr-labels: "auto-merge"
           debug: true
