--- a/.github/workflows/update-flake-inputs.yml
+++ b/.github/workflows/update-flake-inputs.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
       - name: Setup Nix
-        uses: cachix/install-nix-action@v31
+        uses: NixOS/nix-installer@main
       - name: Update flake inputs
         uses: mic92/update-flake-inputs@main
         with:
