--- a/.github/workflows/update-packages.yaml
+++ b/.github/workflows/update-packages.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
       - name: Setup Nix
-        uses: NixOS/nix-installer@main
+        uses: NixOS/nix-installer-action@main
       - name: Setup GitHub CLI
         run: |
           echo "${{ steps.app-token.outputs.token }}" | gh auth login --with-token
