uptermd: add tmux workaround to website

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -94,7 +94,7 @@ set -g base-index 1
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_AUTH_SOCK SSH_CONNECTION SSH_TTY WINDOWID XAUTHORITY TERM'
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_AUTH_SOCK SSH_CONNECTION SSH_TTY WINDOWID XAUTHORITY TERM UPTERM_ADMIN_SOCKET'
 
 # keep working directory in new tabs
 bind '"' split-window -c "#{pane_current_path}"
