pi: add rytswd/pi-agent-extensions as submodule
Use upstream extensions for direnv, questionnaire, and slow-mode
instead of maintaining local copies. The submodule lives at the repo
root (not under home/) to avoid homeshick symlinking the entire
checkout into ~/.pi/agent/.

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "fish/autopair.fish"]
 	path = fish/autopair.fish
 	url = https://github.com/jorgebucaran/autopair.fish
+[submodule "pi-agent-extensions"]
+	path = pi-agent-extensions
+	url = https://github.com/rytswd/pi-agent-extensions
