--- a/.github/workflows/update-nvim-plugins.yaml
+++ b/.github/workflows/update-nvim-plugins.yaml
@@ -12,6 +12,10 @@ jobs:
         with:
           submodules: true
       - uses: NixOS/nix-installer@main
+        with:
+          extra-conf: |
+            extra-substituters = https://cache.thalheim.io
+            extra-trusted-public-keys = cache.thalheim.io-1:R7msbosLEZKrxk/lKxf9BTjOOH7Ax3H0Qj0/6wiHOgc=
       - name: Update vim plugins
         run: |
           nix run .#nvim -- --headless "+Lazy! update" +qa
