--- a/.github/workflows/update-packages.yaml
+++ b/.github/workflows/update-packages.yaml
@@ -27,6 +27,10 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
       - name: Setup Nix
         uses: NixOS/nix-installer-action@main
+        with:
+          extra-conf: |
+            extra-substituters = https://cache.thalheim.io
+            extra-trusted-public-keys = cache.thalheim.io-1:R7msbosLEZKrxk/lKxf9BTjOOH7Ax3H0Qj0/6wiHOgc=
       - name: Setup GitHub CLI
         run: |
           echo "${{ steps.app-token.outputs.token }}" | gh auth login --with-token
